Making nova parameters configurable for nuage-metadata-agent
Exposing 'instance_name_template' to be set via
  extra config for nuage-metadata-agent to function

Making nova::api::admin_tenant_name
  available on the compute node which is
    required by nuage-metadata-agent service

Making KeystonePublicApiVirtualIP available
  on the compute node, which is used by the
    nuage-metadata-agent to build the auth-url

Change-Id: I9736015e18cebf32b07940bf559063b60085f2fb

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -431,6 +431,10 @@ parameters:
     type: string
     default: ''
     hidden: true
+  InstanceNameTemplate:
+    default: 'instance-%08x'
+    description: Template string to be used to generate instance names
+    type: string
   KeystoneCACertificate:
     default: ''
     description: Keystone self-signed certificate authority certificate.
@@ -844,6 +848,7 @@ resources:
           HorizonSecret: {get_resource: HorizonSecret}
           Image: {get_param: controllerImage}
           ImageUpdatePolicy: {get_param: ImageUpdatePolicy}
+          InstanceNameTemplate: {get_param: InstanceNameTemplate}
           KeyName: {get_param: KeyName}
           KeystoneCACertificate: {get_param: KeystoneCACertificate}
           KeystoneSigningCertificate: {get_param: KeystoneSigningCertificate}
