--- a/puppet/hieradata/common.yaml
+++ b/puppet/hieradata/common.yaml
@@ -7,6 +7,7 @@ ceilometer::agent::auth::auth_region: 'regionOne'
 # changes in the tripleo-incubator keystone role setup
 ceilometer::agent::auth::auth_tenant_name: 'admin'
 
+nova::api::admin_tenant_name: 'service'
 nova::network::neutron::neutron_admin_tenant_name: 'service'
 nova::network::neutron::neutron_admin_username: 'neutron'
 nova::network::neutron::dhcp_domain: ''
