--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -90,6 +90,7 @@ pacemaker::resource_defaults::defaults:
   resource-stickiness: { value: INFINITY }
 
 # horizon
+horizon::cache_backend: django.core.cache.backends.memcached.MemcachedCache
 horizon::django_session_engine: 'django.contrib.sessions.backends.cache'
 
 # mysql
