--- a/network/ports/net_ip_map.yaml
+++ b/network/ports/net_ip_map.yaml
@@ -7,21 +7,45 @@ parameters:
   ExternalIp:
     default: ''
     type: string
+  ExternalIpUri:
+    default: ''
+    type: string
+    description: IP address with brackets in case of IPv6
   InternalApiIp:
     default: ''
     type: string
+  InternalApiIpUri:
+    default: ''
+    type: string
+    description: IP address with brackets in case of IPv6
   StorageIp:
     default: ''
     type: string
+  StorageIpUri:
+    default: ''
+    type: string
+    description: IP address with brackets in case of IPv6
   StorageMgmtIp:
     default: ''
     type: string
+  StorageMgmtIpUri:
+    default: ''
+    type: string
+    description: IP address with brackets in case of IPv6
   TenantIp:
     default: ''
     type: string
+  TenantIpUri:
+    default: ''
+    type: string
+    description: IP address with brackets in case of IPv6
   ManagementIp:
     default: ''
     type: string
+  ManagementIpUri:
+    default: ''
+    type: string
+    description: IP address with brackets in case of IPv6
 
 outputs:
   net_ip_map:
@@ -36,3 +60,15 @@ outputs:
       storage_mgmt: {get_param: StorageMgmtIp}
       tenant: {get_param: TenantIp}
       management: {get_param: ManagementIp}
+  net_ip_uri_map:
+    description: >
+      A Hash containing a mapping of netowrk names to assigned IPs for a
+      specific machine with brackets around IPv6 addresses for use in URLs.
+    value:
+      ctlplane: {get_param: ControlPlaneIp}
+      external: {get_param: ExternalIpUri}
+      internal_api: {get_param: InternalApiIpUri}
+      storage: {get_param: StorageIpUri}
+      storage_mgmt: {get_param: StorageMgmtIpUri}
+      tenant: {get_param: TenantIpUri}
+      management: {get_param: ManagementIpUri}
