--- a/network/ports/noop.yaml
+++ b/network/ports/noop.yaml
@@ -44,6 +44,9 @@ outputs:
   ip_address:
     description: pass thru network IP
     value: {get_param: ControlPlaneIP}
+  ip_address_uri:
+    description: pass thru network IP (for compatibility with vip_v6.yaml)
+    value: {get_param: ControlPlaneIP}
   ip_subnet:
     description: IP/Subnet CIDR for the pass thru network IP
     value:
