--- a/network/ports/tenant.yaml
+++ b/network/ports/tenant.yaml
@@ -43,6 +43,9 @@ outputs:
   ip_address:
     description: tenant network IP
     value: {get_attr: [TenantPort, fixed_ips, 0, ip_address]}
+  ip_address_uri:
+    description: tenant network IP (for compatibility with tenant_v6.yaml)
+    value: {get_attr: [TenantPort, fixed_ips, 0, ip_address]}
   ip_subnet:
     # FIXME: this assumes a 2 digit subnet CIDR (need more heat functions?)
     description: IP/Subnet CIDR for the tenant network IP
