--- a/network/ports/vip.yaml
+++ b/network/ports/vip.yaml
@@ -45,6 +45,9 @@ outputs:
   ip_address:
     description: Virtual IP network IP
     value: {get_attr: [VipPort, fixed_ips, 0, ip_address]}
+  ip_address_uri:
+    description: Virtual IP network IP (for compatibility with vip.yaml)
+    value: {get_attr: [VipPort, fixed_ips, 0, ip_address]}
   ip_subnet:
     # FIXME: this assumes a 2 digit subnet CIDR (need more heat functions?)
     description: IP/Subnet CIDR for the network associated with this IP
