--- a/network/ports/vip_v6.yaml
+++ b/network/ports/vip_v6.yaml
@@ -1,7 +1,7 @@
 heat_template_version: 2015-04-30
 
 description: >
-  Creates a port for a VIP on the undercloud ctlplane network.
+  Creates a port for a VIP on the isolated network NetworkName.
   The IP address will be chosen automatically if FixedIPs is empty.
 
 parameters:
@@ -10,14 +10,14 @@ parameters:
     default: ''
     type: string
   NetworkName:
-    description: # Here for compatibility with isolated networks
-    default: ctlplane
+    description: Name of the network where the VIP will be created
+    default: internal_api
     type: string
   PortName:
     description: Name of the port
     default: ''
     type: string
-  ControlPlaneIP: # Here for compatibility with noop.yaml
+  ControlPlaneIP: # Here for compatability with noop.yaml
     description: IP address on the control plane
     default: ''
     type: string
@@ -36,7 +36,7 @@ resources:
   VipPort:
     type: OS::Neutron::Port
     properties:
-      network: {get_param: ControlPlaneNetwork}
+      network: {get_param: NetworkName}
       name: {get_param: PortName}
       fixed_ips: {get_param: FixedIPs}
       replacement_policy: AUTO
@@ -46,11 +46,16 @@ outputs:
     description: Virtual IP network IP
     value: {get_attr: [VipPort, fixed_ips, 0, ip_address]}
   ip_address_uri:
-    description: Virtual IP network IP (for compatibility with vip_v6.yaml)
-    value: {get_attr: [VipPort, fixed_ips, 0, ip_address]}
+    description: Virtual IP with brackets suitable for a URL
+    value:
+          list_join:
+          - ''
+          - - '['
+            - {get_attr: [VipPort, fixed_ips, 0, ip_address]}
+            - ']'
   ip_subnet:
     # FIXME: this assumes a 2 digit subnet CIDR (need more heat functions?)
-    description: IP/Subnet CIDR for the ctlplane network.
+    description: IP/Subnet CIDR for the network associated with this IP
     value:
           list_join:
             - ''
