--- a/network/ports/external_v6.yaml
+++ b/network/ports/external_v6.yaml
@@ -13,7 +13,7 @@ parameters:
     description: Name of the port
     default: ''
     type: string
-  ControlPlaneIP: # Here for compatibility with noop.yaml
+  ControlPlaneIP: # Here for compatability with noop.yaml
     description: IP address on the control plane
     default: ''
     type: string
@@ -49,8 +49,13 @@ outputs:
     description: external network IP
     value: {get_attr: [ExternalPort, fixed_ips, 0, ip_address]}
   ip_address_uri:
-    description: external network IP (for compatibility with external_v6.yaml)
-    value: {get_attr: [ExternalPort, fixed_ips, 0, ip_address]}
+    description: external network IP with brackets suitable for a URL
+    value:
+          list_join:
+          - ''
+          - - '['
+            - {get_attr: [ExternalPort, fixed_ips, 0, ip_address]}
+            - ']'
   ip_subnet:
     # FIXME: this assumes a 2 digit subnet CIDR (need more heat functions?)
     description: IP/Subnet CIDR for the external network IP
