--- a/network/ports/management_from_pool.yaml
+++ b/network/ports/management_from_pool.yaml
@@ -33,6 +33,9 @@ outputs:
   ip_address:
     description: management network IP
     value: {get_param: [IPPool, {get_param: ManagementNetName}, {get_param: NodeIndex}]}
+  ip_address_uri:
+    description: management network IP (for compatibility with management_v6.yaml)
+    value: {get_param: [IPPool, {get_param: ManagementNetName}, {get_param: NodeIndex}]}
   ip_subnet:
     description: IP/Subnet CIDR for the management network IP
     value:
