--- a/network/ports/management_v6.yaml
+++ b/network/ports/management_v6.yaml
@@ -1,4 +1,4 @@
-heat_template_version: 2015-04-30
+heat_template_version: 2015-10-15
 
 description: >
   Creates a port on the management network. The IP address will be chosen
@@ -37,15 +37,18 @@ outputs:
     description: management network IP
     value: {get_attr: [ManagementPort, fixed_ips, 0, ip_address]}
   ip_address_uri:
-    description: management network IP (for compatibility with management_v6.yaml)
-    value: {get_attr: [ManagementPort, fixed_ips, 0, ip_address]}
+    description: management network IP with brackets suitable for a URL
+    value:
+          list_join:
+          - ''
+          - - '['
+            - {get_attr: [ManagementPort, fixed_ips, 0, ip_address]}
+            - ']'
   ip_subnet:
-    # FIXME: this assumes a 2 digit subnet CIDR (need more heat functions?)
     description: IP/Subnet CIDR for the management network IP
     value:
           list_join:
             - ''
             - - {get_attr: [ManagementPort, fixed_ips, 0, ip_address]}
               - '/'
-              - {get_attr: [ManagementPort, subnets, 0, cidr, -2]}
-              - {get_attr: [ManagementPort, subnets, 0, cidr, -1]}
+              - {str_split: ['/', {get_attr: [ManagementPort, subnets, 0, cidr]}, 1]}
