--- a/network/ports/storage.yaml
+++ b/network/ports/storage.yaml
@@ -43,6 +43,9 @@ outputs:
   ip_address:
     description: storage network IP
     value: {get_attr: [StoragePort, fixed_ips, 0, ip_address]}
+  ip_address_uri:
+    description: storage network IP (for compatibility with storage_v6.yaml)
+    value: {get_attr: [StoragePort, fixed_ips, 0, ip_address]}
   ip_subnet:
     # FIXME: this assumes a 2 digit subnet CIDR (need more heat functions?)
     description: IP/Subnet CIDR for the storage network IP
