--- a/network/ports/storage_mgmt.yaml
+++ b/network/ports/storage_mgmt.yaml
@@ -43,6 +43,10 @@ outputs:
   ip_address:
     description: storage_mgmt network IP
     value: {get_attr: [StorageMgmtPort, fixed_ips, 0, ip_address]}
+  ip_address_uri:
+    description: |
+        storage_mgmt network IP (for compatibility with storage_mgmt_v6.yaml)
+    value: {get_attr: [StorageMgmtPort, fixed_ips, 0, ip_address]}
   ip_subnet:
     # FIXME: this assumes a 2 digit subnet CIDR (need more heat functions?)
     description: IP/Subnet CIDR for the storage_mgmt network IP
