--- a/network/ports/tenant_v6.yaml
+++ b/network/ports/tenant_v6.yaml
@@ -1,18 +1,18 @@
 heat_template_version: 2015-04-30
 
 description: >
-  Creates a port on the internal_api network.
+  Creates a port on the tenant network.
 
 parameters:
-  InternalApiNetName:
-    description: Name of the internal API neutron network
-    default: internal_api
+  TenantNetName:
+    description: Name of the tenant neutron network
+    default: tenant
     type: string
   PortName:
     description: Name of the port
     default: ''
     type: string
-  ControlPlaneIP: # Here for compatibility with noop.yaml
+  ControlPlaneIP: # Here for compatability with noop.yaml
     description: IP address on the control plane
     default: ''
     type: string
@@ -31,29 +31,33 @@ parameters:
 
 resources:
 
-  InternalApiPort:
+  TenantPort:
     type: OS::Neutron::Port
     properties:
-      network: {get_param: InternalApiNetName}
+      network: {get_param: TenantNetName}
       name: {get_param: PortName}
       fixed_ips: {get_param: FixedIPs}
       replacement_policy: AUTO
 
 outputs:
   ip_address:
-    description: internal API network IP
-    value: {get_attr: [InternalApiPort, fixed_ips, 0, ip_address]}
+    description: tenant network IP
+    value: {get_attr: [TenantPort, fixed_ips, 0, ip_address]}
   ip_address_uri:
-    description: |
-        internal API network IP (for compatibility with internal_api_v6.yaml)
-    value: {get_attr: [InternalApiPort, fixed_ips, 0, ip_address]}
+    description: tenant network IP with brackets suitable for a URL
+    value:
+          list_join:
+          - ''
+          - - '['
+            - {get_attr: [TenantPort, fixed_ips, 0, ip_address]}
+            - ']'
   ip_subnet:
     # FIXME: this assumes a 2 digit subnet CIDR (need more heat functions?)
-    description: IP/Subnet CIDR for the internal API network IP
+    description: IP/Subnet CIDR for the tenant network IP
     value:
           list_join:
             - ''
-            - - {get_attr: [InternalApiPort, fixed_ips, 0, ip_address]}
+            - - {get_attr: [TenantPort, fixed_ips, 0, ip_address]}
               - '/'
-              - {get_attr: [InternalApiPort, subnets, 0, cidr, -2]}
-              - {get_attr: [InternalApiPort, subnets, 0, cidr, -1]}
+              - {get_attr: [TenantPort, subnets, 0, cidr, -2]}
+              - {get_attr: [TenantPort, subnets, 0, cidr, -1]}
