--- a/network/ports/management_v6.yaml
+++ b/network/ports/management_v6.yaml
@@ -37,8 +37,13 @@ outputs:
     description: management network IP
     value: {get_attr: [ManagementPort, fixed_ips, 0, ip_address]}
   ip_address_uri:
-    description: management network IP (for compatibility with management_v6.yaml)
-    value: {get_attr: [ManagementPort, fixed_ips, 0, ip_address]}
+    description: management network IP with brackets suitable for a URL
+    value:
+          list_join:
+          - ''
+          - - '['
+            - {get_attr: [ManagementPort, fixed_ips, 0, ip_address]}
+            - ']'
   ip_subnet:
     description: IP/Subnet CIDR for the management network IP
     value:
