--- a/network/ports/vip_v6.yaml
+++ b/network/ports/vip_v6.yaml
@@ -1,4 +1,4 @@
-heat_template_version: 2015-10-15
+heat_template_version: 2015-04-30
 
 description: >
   Creates a port for a VIP on the isolated network NetworkName.
@@ -17,7 +17,7 @@ parameters:
     description: Name of the port
     default: ''
     type: string
-  ControlPlaneIP: # Here for compatibility with noop.yaml
+  ControlPlaneIP: # Here for compatability with noop.yaml
     description: IP address on the control plane
     default: ''
     type: string
@@ -46,13 +46,20 @@ outputs:
     description: Virtual IP network IP
     value: {get_attr: [VipPort, fixed_ips, 0, ip_address]}
   ip_address_uri:
-    description: Virtual IP network IP (for compatibility with vip.yaml)
-    value: {get_attr: [VipPort, fixed_ips, 0, ip_address]}
+    description: Virtual IP with brackets suitable for a URL
+    value:
+          list_join:
+          - ''
+          - - '['
+            - {get_attr: [VipPort, fixed_ips, 0, ip_address]}
+            - ']'
   ip_subnet:
+    # FIXME: this assumes a 2 digit subnet CIDR (need more heat functions?)
     description: IP/Subnet CIDR for the network associated with this IP
     value:
           list_join:
             - ''
             - - {get_attr: [VipPort, fixed_ips, 0, ip_address]}
               - '/'
-              - {str_split: ['/', {get_attr: [VipPort, subnets, 0, cidr]}, 1]}
+              - {get_attr: [VipPort, subnets, 0, cidr, -2]}
+              - {get_attr: [VipPort, subnets, 0, cidr, -1]}
