--- a/network/endpoints/endpoint_map.yaml
+++ b/network/endpoints/endpoint_map.yaml
@@ -3,7 +3,10 @@
 ### by the script build_endpoint_map.py
 
 heat_template_version: '2015-04-30'
-description: A map of OpenStack endpoints.
+description: A map of OpenStack endpoints. Since the endpoints are URLs,
+  we need to have brackets around IPv6 IP addresses. The inputs to these
+  parameters come from net_ip_uri_map, which will include these brackets
+  in IPv6 addresses.
 parameters:
   AodhApiVirtualIP: {type: string, default: ''}
   CeilometerApiVirtualIP: {type: string, default: ''}
