--- a/network/ports/ctlplane_vip.yaml
+++ b/network/ports/ctlplane_vip.yaml
@@ -45,6 +45,9 @@ outputs:
   ip_address:
     description: Virtual IP network IP
     value: {get_attr: [VipPort, fixed_ips, 0, ip_address]}
+  ip_address_uri:
+    description: Virtual IP network IP (for compatibility with vip_v6.yaml)
+    value: {get_attr: [VipPort, fixed_ips, 0, ip_address]}
   ip_subnet:
     description: IP/Subnet CIDR for the ctlplane network.
     value:
