--- a/network/ports/external_from_pool.yaml
+++ b/network/ports/external_from_pool.yaml
@@ -33,6 +33,9 @@ outputs:
   ip_address:
     description: external network IP
     value: {get_param: [IPPool, {get_param: ExternalNetName}, {get_param: NodeIndex}]}
+  ip_address_uri:
+    description: external network IP (for compatibility with IPv6)
+    value: {get_param: [IPPool, {get_param: ExternalNetName}, {get_param: NodeIndex}]}
   ip_subnet:
     description: IP/Subnet CIDR for the external network IP
     value:
