--- a/network/ports/storage_from_pool.yaml
+++ b/network/ports/storage_from_pool.yaml
@@ -33,6 +33,9 @@ outputs:
   ip_address:
     description: storage network IP
     value: {get_param: [IPPool, {get_param: StorageNetName}, {get_param: NodeIndex}]}
+  ip_address_uri:
+    description: storage network IP (for compatibility with storage_v6.yaml)
+    value: {get_param: [IPPool, {get_param: StorageNetName}, {get_param: NodeIndex}]}
   ip_subnet:
     description: IP/Subnet CIDR for the storage network IP
     value:
