--- a/network/ports/storage_mgmt_v6.yaml
+++ b/network/ports/storage_mgmt_v6.yaml
@@ -1,4 +1,4 @@
-heat_template_version: 2015-10-15
+heat_template_version: 2015-04-30
 
 description: >
   Creates a port on the storage_mgmt API network.
@@ -12,7 +12,7 @@ parameters:
     description: Name of the port
     default: ''
     type: string
-  ControlPlaneIP: # Here for compatibility with noop.yaml
+  ControlPlaneIP: # Here for compatability with noop.yaml
     description: IP address on the control plane
     default: ''
     type: string
@@ -44,14 +44,20 @@ outputs:
     description: storage_mgmt network IP
     value: {get_attr: [StorageMgmtPort, fixed_ips, 0, ip_address]}
   ip_address_uri:
-    description: |
-        storage_mgmt network IP (for compatibility with storage_mgmt_v6.yaml)
-    value: {get_attr: [StorageMgmtPort, fixed_ips, 0, ip_address]}
+    description: storage_mgmt network IP with brackets suitable for a URI
+    value:
+          list_join:
+          - ''
+          - - '['
+            - {get_attr: [StorageMgmtPort, fixed_ips, 0, ip_address]}
+            - ']'
   ip_subnet:
+    # FIXME: this assumes a 2 digit subnet CIDR (need more heat functions?)
     description: IP/Subnet CIDR for the storage_mgmt network IP
     value:
           list_join:
             - ''
             - - {get_attr: [StorageMgmtPort, fixed_ips, 0, ip_address]}
               - '/'
-              - {str_split: ['/', {get_attr: [StorageMgmtPort, subnets, 0, cidr]}, 1]}
+              - {get_attr: [StorageMgmtPort, subnets, 0, cidr, -2]}
+              - {get_attr: [StorageMgmtPort, subnets, 0, cidr, -1]}
