--- a/network/ports/tenant_from_pool.yaml
+++ b/network/ports/tenant_from_pool.yaml
@@ -33,6 +33,9 @@ outputs:
   ip_address:
     description: tenant network IP
     value: {get_param: [IPPool, {get_param: TenantNetName}, {get_param: NodeIndex}]}
+  ip_address_uri:
+    description: tenant network IP (for compatibility with tenant_v6.yaml)
+    value: {get_param: [IPPool, {get_param: TenantNetName}, {get_param: NodeIndex}]}
   ip_subnet:
     description: IP/Subnet CIDR for the tenant network IP
     value:
