--- a/network/ports/tenant_v6.yaml
+++ b/network/ports/tenant_v6.yaml
@@ -1,4 +1,4 @@
-heat_template_version: 2015-10-15
+heat_template_version: 2015-04-30
 
 description: >
   Creates a port on the tenant network.
@@ -12,7 +12,7 @@ parameters:
     description: Name of the port
     default: ''
     type: string
-  ControlPlaneIP: # Here for compatibility with noop.yaml
+  ControlPlaneIP: # Here for compatability with noop.yaml
     description: IP address on the control plane
     default: ''
     type: string
@@ -44,13 +44,20 @@ outputs:
     description: tenant network IP
     value: {get_attr: [TenantPort, fixed_ips, 0, ip_address]}
   ip_address_uri:
-    description: tenant network IP (for compatibility with tenant_v6.yaml)
-    value: {get_attr: [TenantPort, fixed_ips, 0, ip_address]}
+    description: tenant network IP with brackets suitable for a URL
+    value:
+          list_join:
+          - ''
+          - - '['
+            - {get_attr: [TenantPort, fixed_ips, 0, ip_address]}
+            - ']'
   ip_subnet:
+    # FIXME: this assumes a 2 digit subnet CIDR (need more heat functions?)
     description: IP/Subnet CIDR for the tenant network IP
     value:
           list_join:
             - ''
             - - {get_attr: [TenantPort, fixed_ips, 0, ip_address]}
               - '/'
-              - {str_split: ['/', {get_attr: [TenantPort, subnets, 0, cidr]}, 1]}
+              - {get_attr: [TenantPort, subnets, 0, cidr, -2]}
+              - {get_attr: [TenantPort, subnets, 0, cidr, -1]}
