--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -92,6 +92,9 @@ pacemaker::resource_defaults::defaults:
 # horizon
 horizon::cache_backend: django.core.cache.backends.memcached.MemcachedCache
 horizon::django_session_engine: 'django.contrib.sessions.backends.cache'
+horizon::vhost_extra_params:
+  add_listen: false
+  priority: 10
 
 # mysql
 mysql::server::manage_config_file: true
